<resources>
    <string name="app_name">Components</string>

    <string name="home_activity">Activity</string>
    <string name="home_fragment">Fragment</string>
    <string name="home_service">Service</string>
    <string name="home_intent">Intent</string>
    <string name="home_intent_service">Intent Service</string>
    <string name="home_notification">Notification</string>
    <string name="home_thread">Thread Concept</string>
    <string name="home_networking">Networking Concept Get Request</string>
    <string name="home_data_storage">Data Storage</string>

    <string name="fragment_a">Fragment A</string>
    <string name="fragment_b">Fragment B</string>

    <!--strings for intent-->
    <string name="intent_implicit_intents">Implicit intent</string>
    <string name="intent_explicit_intents">Explicit intent</string>
    <string name="intent_start_activity_for_result">Start Activity For Result</string>
    <string name="intent_share_intent">Share Intent</string>
    <string name="intent_submit_btn">Submit</string>
    <string name="intent_result_enter_value">Enter the value to pass to previous activity</string>

    <!--strings for services-->
    <string name="service_start">Start Service</string>
    <string name="service_stop">Stop Service</string>
    <string name="service_start_bind">Start Bound Service</string>
    <string name="service_intent_service">Start Intent Service</string>
    <string name="service_ipc">Inter Process Communication</string>

    <string name="service_title_text_for_bound_service">Please enter any two numbers to perform operations</string>
    <string name="service_title_text_for_ipc">Please enter any two numbers to perform inter process communication</string>
    <string name="service_add_button">Add</string>
    <string name="service_sub_button">Subtract</string>
    <string name="service_bind">Bind service</string>
    <string name="service_unbind">UnBind service</string>

    <!--strings for threads-->
    <string name="thread_run_on_ui">Activity.runOnUiThread (Runnable)</string>
    <string name="thread_view_post">View.post (Runnable)</string>
    <string name="thread_view_post_delay">View.postDelayed (Runnable, long)</string>
    <string name="thread_asyc_task">AsyncTask</string>

    <!--strings for threads-->
    <string name="notification_local_btn">Local Notification</string>

</resources>
