<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/home_activity_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_activity" />

    <Button
        android:id="@+id/home_fragment_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_fragment" />

    <Button
        android:id="@+id/home_intent_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_intent" />

    <Button
        android:id="@+id/home_service_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_service" />

    <Button
        android:id="@+id/home_notification_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_notification" />

    <Button
        android:id="@+id/home_thread_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_thread" />


    <Button
        android:id="@+id/home_data_storage_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_data_storage" />

    <Button
        android:id="@+id/home_networking_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_networking" />
</LinearLayout>
