<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.reeuse.component.service.ServiceDemoActivity">


    <Button
        android:id="@+id/service_start_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_start" />

    <Button
        android:id="@+id/service_stop_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_stop" />

    <Button
        android:id="@+id/service_bound_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_start_bind" />

    <Button
        android:id="@+id/service_intent_service_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_intent_service" />

    <Button
        android:id="@+id/service_ipc_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service_ipc" />

</LinearLayout>
