<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.reeuse.component.intent.IntentDemoActivity">


    <Button
        android:id="@+id/intent_implicit_intent_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intent_implicit_intents" />

    <Button
        android:id="@+id/intent_explicit_intent_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intent_implicit_intent_btn"
        android:text="@string/intent_explicit_intents" />


    <Button
        android:id="@+id/intent_start_activity_for_result_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intent_explicit_intent_btn"
        android:text="@string/intent_start_activity_for_result" />

    <Button
        android:id="@+id/intent_start_share_intent_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/intent_start_activity_for_result_btn"
        android:text="@string/intent_share_intent" />


</RelativeLayout>
