<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/service_title_text_for_bound_service"
        android:textColor="@color/colorAccent"
        android:textSize="16dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/activity_bound_service_num_input_one_etxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="0" />

    <EditText
        android:id="@+id/activity_bound_service_num_input_two_etxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="0" />

    <Button
        android:id="@+id/activity_bound_service_add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickEvent"
        android:text="@string/service_add_button" />

    <Button
        android:id="@+id/activity_bound_service_sub_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickEvent"
        android:text="@string/service_sub_button" />
</LinearLayout>